--- a/gentle_reminder/app/views/goals/new.html.erb
+++ b/gentle_reminder/app/views/goals/new.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for([@user, @goal]) do |f| %>
 <br>
-<%= f.label :programming_language %>
-<%= f.text_field :programming_language%> 
+<%= f.label :goal_type %>
+<%= f.text_field :goal_type%> 
 
 <%= f.submit %>
 
