--- a/gentle_reminder/app/views/users/new.html.erb
+++ b/gentle_reminder/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
+<h1>Sign up!</h1>
+
 <%= form_for(@user) do |f| %>
 <br>
+<%= render 'shared/error_messages' %>
 <%=f.label :name %>
 <%=f.text_field :name%> 
 <br>
@@ -7,8 +10,12 @@
 <%=f.text_field :email%> 
 <br>
 <%=f.label :password %>
-<%=f.text_field :password%> 
+<%=f.password_field :password%> 
 <br>
-<%= f.submit %>
+<!-- make password_conf work -->
+<%=f.label :password_confirmation %>
+<%=f.password_field :password%>
+<br>
+<%= f.submit "String" %>
 
 <%end%>
