update sign in button to create account

--- a/gentle_reminder/app/views/users/new.html.erb
+++ b/gentle_reminder/app/views/users/new.html.erb
@@ -16,6 +16,6 @@
 <%=f.label :password_confirmation %>
 <%=f.password_field :password%>
 <br>
-<%= f.submit "String" %>
+<%= f.submit "Create Account" %>
 
 <%end%>
