--- a/gentle_reminder/app/views/goals/show.html.erb
+++ b/gentle_reminder/app/views/goals/show.html.erb
@@ -1,2 +1,8 @@
 I just made a new goal! <br>
 <%= @goal.inspect %>
+<h2> I have courses!</h2>
+<ul>
+  <% @user_courses.each do |course| %>
+    <li><%= course %></li>
+  <% end %>
+</ul>
