--- a/gentle_reminder/app/views/goal_types/new.html.erb
+++ b/gentle_reminder/app/views/goal_types/new.html.erb
@@ -1,11 +1,11 @@
 <!-- work on this view together -->
 <h1>Create Your Goal</h1>
 
-<%= form_for([@user, @goal]) do |f| %>
+<%= form_for([@user, @goal_type]) do |f| %>
 <br>
-<% f.label :goal_type %>
-<% f.text_field :goal_type%> 
-<%= collection_select(:programming_language, :id, @programming_languages, :id, :name) %>
+<% f.label :name %>
+<% f.text_field :name%> 
+<%= collection_select(:goal_type, :id, @goal_types, :id, :name) %>
 
 <br>
 <%= collection_select(:tool, :id, @tools, :id, :tool_description) %>
