add link to sign in with meetup

--- a/gentle_reminder/app/views/layouts/application.html.erb
+++ b/gentle_reminder/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 <%= link_to "Settings", '#' %>
 <%= link_to "Sign Out", signout_path, method: "delete"%>
 <% else %>
-<%= link_to "Sign in ", signin_path %>
+<%= link_to "Sign in ", signin_path %> <br>
+<%= link_to "Sing in with Meetup", "/auth/meetup" %> 
 <% end %>
 <% flash.each do |key, value| %>
 	<span><%= value %></span>
