--- a/gentle_reminder/app/views/users/index.html.erb
+++ b/gentle_reminder/app/views/users/index.html.erb
@@ -1,1 +1,3 @@
-Hello World 
+<h1>Welcome to Gentle Reminder Homepage</h1>
+<h3><%= link_to "Sign In!", signin_path %></h3>
+<h3><%= link_to "Sign Up!", new_user_path %></h3>
