--- a/gentle_reminder/app/views/goals/index.html.erb
+++ b/gentle_reminder/app/views/goals/index.html.erb
@@ -3,10 +3,12 @@
  <p><%= link_to "Create a goal now!", new_user_goal_path %></p>
  
   <%counter = 1%>
-  <p><% @goals.each do |goal| %></p>
-
-  <%= "#{counter}. #{goal.goal_type.name} #{goal.charity.name} #{goal.monetary_amount} " %>
-
+  <% @goals.each do |goal| %>
+  <ul>
+  	<li style= "list-style-type:none; font-weight: 700;"><%= "#{counter}. #{goal.goal_type.name}" %></li>
+  	<li style= "list-style-type:none;">My Charity:<%= " #{goal.charity.name}" %></li>
+  	<li style= "list-style-type:none;">My Pledge:<%= " #{goal.monetary_amount} " %></li>
+  </ul>
   <%counter += 1%>
 
   <% end %>
