--- a/gentle_reminder/app/views/layouts/application.html.erb
+++ b/gentle_reminder/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   <%= link_to "Sign Out", signout_path, method: "delete"%>
 <% else %>
 <%= link_to "Sign in ", signin_path %>
+<br>
+<%= link_to "Sign in with Github ", "/auth/github" %>
+<br>
+<%= link_to "Sign in with Meetup", "/auth/meetup" %>
 <% end %>
 <% flash.each do |key, value| %>
 	<span><%= value %></span>
@@ -22,4 +26,4 @@
 </body>
 </html>
 
-<!-- method: "delete" -->
+
