--- a/gentle_reminder/app/views/goals/new.html.erb
+++ b/gentle_reminder/app/views/goals/new.html.erb
@@ -31,6 +31,8 @@
 <%= radio_button_tag(:commitments, 50) %>
 <%= label_tag "100 commits" %>
 <%= radio_button_tag(:commitments, 100) %>
+<%= label_tag "What Repo will we be tracking?" %>
+<%= text_field_tag :repo %>
 <br>
 <h4>If you're planning on going to Meetups, how many Meetups will you need to meet your goals?</h4>
 <p>(Please note, this is per Meetup group you choose.)
