--- a/gentle_reminder/app/views/users/show.html.erb
+++ b/gentle_reminder/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
-<h1><%=@user.name%></h1>
+<div class = "sign-in-left-col">
+	<div class = "moveit-left">
+		<h1>Welcome, <%=@user.name%>!</h1>
 
-<h3>Now you can <%=link_to "sign in", signin_path%>!</h3>
+		<h3>Now you can <%=link_to "sign in", signin_path%>!</h3>
+	</div>
+</div>
