--- a/gentle_reminder/app/views/users/new.html.erb
+++ b/gentle_reminder/app/views/users/new.html.erb
@@ -1,21 +1,32 @@
-<h1>Sign up!</h1>
+<div class = "sign-in-left-col emphasis-box">
+	<div class = "header-align">
+		<h1>New To Gentle Reminder?</h1>
+			<h2>Sign up now, its free and easy!</h2>
+	</div>
 
-<%= form_for(@user) do |f| %>
-<br>
-<%= render 'shared/error_messages' %>
-<%=f.label :name %>
-<%=f.text_field :name%> 
-<br>
-<%=f.label :email %>
-<%=f.text_field :email%> 
-<br>
-<%=f.label :password %>
-<%=f.password_field :password%> 
-<br>
-<!-- make password_conf work -->
-<%=f.label :password_confirmation %>
-<%=f.password_field :password%>
-<br>
-<%= f.submit "Create Account" %>
+	<%= form_for(@user) do |f| %>
+	<br>
+	<%= render 'shared/error_messages' %>
+	<div class = "bump">
+		<%=f.label :name %>
+	</div>
+		<%=f.text_field :name%> 
+	<div class = "bump">
+		<%=f.label :email %>
+	</div>
+		<%=f.text_field :email%> 
+	<div class = "bump">
+		<%=f.label :password %>
+	</div>
+		<%=f.password_field :password%> 
+	<div class = "bump">
+	<!-- make password_conf work -->
+		<%=f.label :password_confirmation %>
+	</div>
+		<%=f.password_field :password%>
+	<div class = "bump">
+		<%= f.submit "Create Account" %>
+	</div>
+</div>
 
 <%end%>
