added little styling stuff

--- a/gentle_reminder/app/assets/stylesheets/general.css
+++ b/gentle_reminder/app/assets/stylesheets/general.css
@@ -19,8 +19,7 @@ a:visited {
 
 .container {
   overflow: hidden;
-  width: 99.89%;
-  background-color: red; }
+  width: 99.89%; }
 
 .header {
   background-color: #d4fff0;
