adding more stuff

--- a/gentle_reminder/app/views/users/new.html.erb
+++ b/gentle_reminder/app/views/users/new.html.erb
@@ -4,7 +4,8 @@
 
 <div class = "container">
 	<div class= "sign-in-left-col emphasis-box">
-		<h1>Sign up!</h1>
+		<h1>Sign up now!</h1>
+		
 
 		<%= form_for(@user) do |f| %>
 		<br>
