--- a/gentle_reminder/app/views/goals/index.html.erb
+++ b/gentle_reminder/app/views/goals/index.html.erb
@@ -14,7 +14,9 @@
   	<li style= "list-style-type:none;">My Meetups:<%= goal_hash[:goal_key].meetups %></li>
   </ul>
   <ul>
-    <li style= "list-style-type:none;"><%= @weekly_commits%> </li>
+  
+    <li style= "list-style-type:none;">Repo Name: <%= goal_hash[:goal_key].repo%> </li>
+    <li style= "list-style-type:none;"> Past week commits(not really working): <%= @weekly_commits%> </li>
   </ul>
   <%counter += 1%>
 
