--- a/gentle_reminder/app/views/users/show.html.erb
+++ b/gentle_reminder/app/views/users/show.html.erb
@@ -1,3 +1,13 @@
 <h1><%=@user.name%></h1>
 
-<h3>Now you can <%=link_to "sign in", signin_path%>!</h3>
+<p>One more info</p>
+<div>
+<%= form_for(@user) do |f| %>
+    <br>
+    <%= render 'shared/error_messages' %>
+    <%=f.label "What is your Github username?" %>
+    <%=f.text_field :github_name%> 
+    <br>  
+    <%= f.submit "That's it" %>
+</div>
+<%end%>
