--- a/gentle_reminder/app/views/users/new.html.erb
+++ b/gentle_reminder/app/views/users/new.html.erb
@@ -1,10 +1,11 @@
-<div class = "header">
-	<h1 class = "title">WELCOME TO GENTLE REMINDER</h1>
-</div>
 
-<div class = "container">
+
+
 	<div class= "sign-in-left-col emphasis-box">
-		<h1>Sign up now!</h1>
+		<div class = "header-align">
+			<h1>Sign up now</h1>
+			<h3>Its free and easy!</h3>
+		</div>
 		
 
 		<%= form_for(@user) do |f| %>
@@ -25,6 +26,6 @@
 		<br>
 		<%= f.submit "Create Account" %>
 	</div>
-</div>
+
 
 <%end%>
