--- a/gentle_reminder/app/views/goals/index.html.erb
+++ b/gentle_reminder/app/views/goals/index.html.erb
@@ -1,6 +1,9 @@
-<h2> MY GOALS</h2>
+<div class = "right-col">
+  <h2> MY GOALS</h2>
 
- <p><%= link_to "Create a goal now!", new_user_goal_path %></p>
+
+  <p><%= link_to "Create a goal now!", new_user_goal_path %></p>
+ </div>
  
   <%counter = 1%>
   <% @goals_array.each do |goal_hash| %>
