--- a/gentle_reminder/app/assets/stylesheets/general.css
+++ b/gentle_reminder/app/assets/stylesheets/general.css
@@ -1,4 +1,3 @@
-/* apply a natural box layout model to all elements */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -93,7 +92,8 @@ input[type=text] {
   border: 2px solid #6a7f78;
   border-radius: 2px;
   font-size: 1.5em;
-  text-align: center; }
+  color: #6a7f78;
+  text-align: left; }
 
 input[type=password] {
   background-color: azure;
@@ -104,6 +104,9 @@ input[type=password] {
 
 .bump {
   margin-top: 1%; }
+
+.bump2 {
+  margin-top: 5%; }
 
 .shoveit {
   margin: 1%; }
@@ -122,6 +125,17 @@ h1.title {
 
 h1.subtitle {
   margin-bottom: 40px; }
+
+.github-access {
+  color: #447f6a;
+  text-align: center; }
+
+.column-header {
+  text-align: center;
+  width: 99.89%; }
+
+.dropdown-centered {
+  margin: 0 10%; }
 
 .emphasis-box {
   background-color: #aaccc0;
