--- a/gentle_reminder/app/views/goals/index.html.erb
+++ b/gentle_reminder/app/views/goals/index.html.erb
@@ -1,27 +1,30 @@
-<div class = "right-col">
-  <h2> MY GOALS</h2>
+<div class = "left-col">
+  <div class = "emphasis-box">
+    <h2> MY GOALS</h2>
 
 
-  <p><%= link_to "Create a goal now!", new_user_goal_path %></p>
- </div>
- 
-  <%counter = 1%>
-  <% @goals_array.each do |goal_hash| %>
-  <ul>
-  	<li style= "list-style-type:none; font-weight: 700;"><%= counter%></li>
-  	<li style= "list-style-type:none;">My Charity: <%= goal_hash[:goal_key].charity.name%></li>
-  	<li style= "list-style-type:none;">My Pledge: <%= goal_hash[:goal_key].monetary_amount %></li>
-  	<li style= "list-style-type:none;">Finish Date: <%= goal_hash[:date] %></li>
-  	<li style= "list-style-type:none;">My Commits: <%= goal_hash[:goal_key].commitments %></li>
-    <li style= "list-style-type:none;">Commits So Far: <%= goal_hash[:commits] %></li>
-  	<li style= "list-style-type:none;">My Meetups: <%= goal_hash[:goal_key].meetups %></li>
-  </ul>
-  <ul>
-  
-    <li style= "list-style-type:none;">Repo Name: <%= goal_hash[:goal_key].repo%> </li>
-    <li style= "list-style-type:none;"> Past week commits: <%= @weekly_commits%> </li>
-  </ul>
-  <%counter += 1%>
+    <p><%= link_to "Create a goal now!", new_user_goal_path %></p>
+   
+   
+    <%counter = 1%>
+    <% @goals_array.each do |goal_hash| %>
+    <ul>
+    	<li style= "list-style-type:none; font-weight: 700;"><%= counter%></li>
+    	<li style= "list-style-type:none;">My Charity: <%= goal_hash[:goal_key].charity.name%></li>
+    	<li style= "list-style-type:none;">My Pledge: <%= goal_hash[:goal_key].monetary_amount %></li>
+    	<li style= "list-style-type:none;">Finish Date: <%= goal_hash[:date] %></li>
+    	<li style= "list-style-type:none;">My Commits: <%= goal_hash[:goal_key].commitments %></li>
+      <li style= "list-style-type:none;">Commits So Far: <%= goal_hash[:commits] %></li>
+    	<li style= "list-style-type:none;">My Meetups: <%= goal_hash[:goal_key].meetups %></li>
+    </ul>
+    <ul>
+    
+      <li style= "list-style-type:none;">Repo Name: <%= goal_hash[:goal_key].repo%> </li>
+      <li style= "list-style-type:none;"> Past week commits: <%= @weekly_commits%> </li>
+    </ul>
+    <%counter += 1%>
 
-  <% end %>
+    <% end %>
+  </div>
+</div>
 
