--- a/gentle_reminder/app/views/users/index.html.erb
+++ b/gentle_reminder/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<!-- You're not using this page. -->
+
 <h1>Welcome to Gentle Reminder Homepage</h1>
 <h3><%= link_to "Sign In!", signin_path %></h3>
 <h3><%= link_to "Sign Up!", new_user_path %></h3>
