--- a/gentle_reminder/app/assets/stylesheets/general.css
+++ b/gentle_reminder/app/assets/stylesheets/general.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'portersans';
+  src: url("fonts/portersans/porter-sans-inline-block-webfont.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/portersans/porter-sans-inline-block-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/portersans/porter-sans-inline-block-webfont.woff") format("woff"), url("fonts/portersans/porter-sans-inline-block-webfont.ttf") format("truetype"), url("fonts/portersans/porter-sans-inline-block-webfont.svg#svgFontName") format("svg");
+  /* Legacy iOS */ }
+
+@font-face {
+  font-family: 'turnpike';
+  src: url("fonts/turnpike/turnpike-webfont.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/turnpike/turnpike-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/turnpike/turnpike-webfont.woff") format("woff"), url("fonts/turnpike/turnpike-webfont.ttf") format("truetype"), url("fonts/turnpike/turnpike-webfont.svg#svgFontName") format("svg");
+  /* Legacy iOS */ }
+
+@font-face {
+  font-family: 'minimal';
+  src: url("fonts/minimal/minimal-webfont.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/minimal/minimal-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/minimal/minimal-webfont.woff") format("woff"), url("fonts/minimal/minimal-webfont.ttf") format("truetype"), url("fonts/minimal/minimal-webfont.svg#svgFontName") format("svg");
+  /* Legacy iOS */ }
+
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -25,6 +46,22 @@ a:visited {
 a.hover-button {
   color: red; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'portersans', helvetica, arial, sans-serif; }
+
+h1.title {
+  font-size: 500%;
+  font-weight: 900;
+  color: #447f6a;
+  line-height: 100%; }
+
+h1.subtitle {
+  margin-bottom: 40px; }
+
+p {
+  font-family: 'minimal', helvetica, arial, sans-serif;
+  color: red; }
+
 .container {
   overflow: hidden;
   width: 99.89%; }
@@ -49,20 +86,6 @@ a.hover-button {
   width: 49.95%;
   height: 40%;
   margin: 5% 0;
-  float: right; }
-
-.sign-in-left-col {
-  width: 41.62%;
-  margin-right: 1%;
-  margin-top: 5%;
-  height: 40%;
-  float: left; }
-
-.sign-in-right-col {
-  width: 41.62%;
-  margin-left: 1%;
-  margin-top: 5%;
-  min-height: 40%;
   float: right; }
 
 .center-column {
@@ -100,7 +123,10 @@ input[type=password] {
   border: 2px solid #6a7f78;
   border-radius: 2px;
   font-size: 1.5em;
-  text-align: center; }
+  text-align: left; }
+
+*:focus {
+  outline: 0; }
 
 .bump {
   margin-top: 1%; }
@@ -117,14 +143,8 @@ input[type=password] {
 .centered {
   margin-left: 17%; }
 
-h1.title {
-  font-size: 500%;
-  font-weight: 900;
-  color: #447f6a;
-  line-height: 100%; }
-
-h1.subtitle {
-  margin-bottom: 40px; }
+.centered2 {
+  margin-left: 25%; }
 
 .github-access {
   color: #447f6a;
@@ -137,10 +157,42 @@ h1.subtitle {
 .dropdown-centered {
   margin: 0 10%; }
 
+.goals-description {
+  margin: 40% 2%;
+  text-align: centered; }
+
 .emphasis-box {
   background-color: #aaccc0;
   padding: 2%;
   border-radius: 2px; }
+
+.emphasis-box-goals {
+  background-color: #aaccc0;
+  padding: 2%;
+  border-radius: 2px;
+  min-height: 550px; }
+
+.goals-box {
+  width: 99.89%;
+  min-height: 500px; }
+
+.goals-box-left {
+  width: 33.3%;
+  margin: 1%;
+  background-color: #447f6a;
+  color: azure;
+  float: left;
+  display: inline-block;
+  height: 200px; }
+
+.goals-box-right {
+  width: 33.3%;
+  margin: 1%;
+  background-color: #447f6a;
+  color: azure;
+  float: right;
+  display: inline-block;
+  height: 200px; }
 
 .login-button {
   margin: 5%;
