--- a/gentle_reminder/app/assets/stylesheets/general.scss
+++ b/gentle_reminder/app/assets/stylesheets/general.scss
@@ -1,3 +1,31 @@
+@font-face {
+	font-family: 'portersans';
+	src: url('fonts/portersans/porter-sans-inline-block-webfont.eot'); /* IE9 Compat Modes */
+	src: url('fonts/portersans/porter-sans-inline-block-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	     url('fonts/portersans/porter-sans-inline-block-webfont.woff') format('woff'), /* Modern Browsers */
+	     url('fonts/portersans/porter-sans-inline-block-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+	     url('fonts/portersans/porter-sans-inline-block-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+	}
+
+@font-face {
+	font-family: 'turnpike';
+	src: url('fonts/turnpike/turnpike-webfont.eot'); /* IE9 Compat Modes */
+	src: url('fonts/turnpike/turnpike-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	     url('fonts/turnpike/turnpike-webfont.woff') format('woff'), /* Modern Browsers */
+	     url('fonts/turnpike/turnpike-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+	     url('fonts/turnpike/turnpike-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+	}
+
+@font-face {
+	font-family: 'minimal';
+	src: url('fonts/minimal/minimal-webfont.eot'); /* IE9 Compat Modes */
+	src: url('fonts/minimal/minimal-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	     url('fonts/minimal/minimal-webfont.woff') format('woff'), /* Modern Browsers */
+	     url('fonts/minimal/minimal-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+	     url('fonts/minimal/minimal-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+	}
+
+
 // COLORS
 $cool-white: #f0ffff;
 $gray-green: #6a7f78;
@@ -88,6 +116,27 @@ a.hover-button {
 	color: red;
 }
 
+//FONTS
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'portersans', helvetica, arial, sans-serif;
+	// color: yellow;
+}
+
+h1.title {
+	font-size: $title-font;
+	font-weight: $extra-bold;
+	color: $deep-teal;
+	line-height: 100%;
+}
+h1.subtitle {
+	margin-bottom: 40px;
+}
+
+p {
+	font-family: 'minimal', helvetica, arial, sans-serif;
+	color: red;
+}
+
 //CONTAINERS
 
 .container{
@@ -118,26 +167,6 @@ a.hover-button {
 	width: $col-6;
 	height: 40%;
 	margin: 5% 0;
-	float: right;
-	// display: inline-block;
-
-}
-
-.sign-in-left-col {
-	width: $col-5;
-	margin-right: $col-margin;
-	margin-top: 5%;
-	height: 40%;
-	float: left;
-	// display: inline-block;
-
-}
-
-.sign-in-right-col {
-	width: $col-5;
-	margin-left: $col-margin;
-	margin-top: 5%;
-	min-height: 40%;
 	float: right;
 	// display: inline-block;
 
@@ -185,8 +214,12 @@ input[type=password]{
 	border: 2px solid $gray-green;
 	border-radius: $outline;
 	font-size: $button-font-size;
-	text-align: center;
+	text-align: left;
 
+}
+
+*:focus {
+    outline: 0;
 }
 
 //SPACING AND TWEAKS
@@ -209,19 +242,14 @@ input[type=password]{
 .centered {
 	margin-left: 17%;
 }
+.centered2 {
+	margin-left: 25%;
+}
 
 
 // TITLING
 
-h1.title {
-	font-size: $title-font;
-	font-weight: $extra-bold;
-	color: $deep-teal;
-	line-height: 100%;
-}
-h1.subtitle {
-	margin-bottom: 40px;
-}
+
 
 .github-access {
 	color: $deep-teal;
@@ -237,11 +265,48 @@ h1.subtitle {
 	margin: 0 10%;
 }
 
+.goals-description {
+	margin: 40% 2%;
+	text-align: centered
+}
+
 //BOXES
 .emphasis-box {
 	background-color: $cool-gray-green;
 	padding: 2%;
 	border-radius: $outline;
+}
+
+.emphasis-box-goals {
+	background-color: $cool-gray-green;
+	padding: 2%;
+	border-radius: $outline;
+	min-height: 550px;
+}
+
+.goals-box {
+	width: $col-12;
+	min-height: 500px;
+}
+
+.goals-box-left {
+	width: $col-4;
+	margin: $col-margin;
+	background-color: $deep-teal;
+	color: $cool-white;
+	float: left;
+	display: inline-block;
+	height: 200px;
+}
+
+.goals-box-right {
+	width: $col-4;
+	margin: $col-margin;
+	background-color: $deep-teal;
+	color: $cool-white;
+	float: right;
+	display: inline-block;
+	height: 200px;
 }
 
 //BUTTONS
