--- a/gentle_reminder/app/assets/stylesheets/general.css
+++ b/gentle_reminder/app/assets/stylesheets/general.css
@@ -29,7 +29,7 @@ body {
   color: #6a7f78;
   line-height: 1.2em;
   font-size: 1em;
-  font-family: helvetica, arial, sans-serif; }
+  font-family: 'minimal', helvetica, arial, sans-serif; }
 
 a {
   color: #447f6a; }
@@ -50,12 +50,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'portersans', helvetica, arial, sans-serif; }
 
 h1.title {
+  font-family: 'portersans', helvetica, arial, sans-serif;
   font-size: 500%;
   font-weight: 900;
   color: #447f6a;
   line-height: 100%; }
 
 h1.subtitle {
+  font-family: 'turnpike', helvetica, arial, sans-serif;
   margin-bottom: 40px; }
 
 p {
