--- a/gentle_reminder/app/assets/stylesheets/general.css
+++ b/gentle_reminder/app/assets/stylesheets/general.css
@@ -54,26 +54,17 @@ h1.title {
   font-size: 500%;
   font-weight: 900;
   color: #447f6a;
-  line-height: 100%; }
+  line-height: 100%;
+  text-align: center; }
 
 h1.subtitle {
   font-family: 'turnpike', helvetica, arial, sans-serif;
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  text-align: center; }
 
 p {
   font-family: 'minimal', helvetica, arial, sans-serif;
   color: red; }
-
-.container {
-  overflow: hidden;
-  width: 99.89%; }
-
-.header {
-  min-height: 10%;
-  width: 83.24%;
-  padding: 1%;
-  margin-left: 8.35%;
-  text-align: center; }
 
 .left-col {
   border-radius: 2px;
