--- a/gentle_reminder/app/assets/stylesheets/general.css
+++ b/gentle_reminder/app/assets/stylesheets/general.css
@@ -188,8 +188,22 @@ input[type=password] {
   height: 200px; }
 
 .login-button {
+  position: relative;
   margin: 5%;
   padding: 20px 30px;
+
+  display: inline;
+  font-size: 1.5em;
+  font-weight: 900;
+  text-align: center;
+  border-radius: 2px;
+  background-color: #aaccc0; }
+
+  .github_login-button {
+  position: relative;
+  left:48%;
+  padding: 20px 30px;
+
   display: inline;
   font-size: 1.5em;
   font-weight: 900;
